<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#1C1B1B"
    android:outlineAmbientShadowColor="#FFFFFF"
    android:outlineSpotShadowColor="#FFFFFF"
    tools:context="com.example.novigrad.CreateAccount">

<!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--    android:paddingTop="@dimen/activity_vertical_margin"-->
<!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--    android:paddingBottom="@dimen/activity_vertical_margin"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="50dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/appDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Créer un compte"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_username"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_prenom"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/nomDeFamille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_nomDeFamille"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/nomUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_username"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_nomUtilisateur"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/motDepasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_donnerMotDePasse1"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/motDepasse2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_donnerMotDePasse2"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/typeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type de compte:"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioButton_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_empoyee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Employée"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radio_button_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Client"
                android:textColor="@color/white" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/Creer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:backgroundTint="@color/teal_700"
            android:enabled="false"
            android:text="@string/action_creerCompte"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</RelativeLayout>