<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#1C1B1B"
    android:outlineAmbientShadowColor="#FFFFFF"
    android:outlineSpotShadowColor="#FFFFFF"
    tools:context="com.example.novigrad.CreateAccount">

    <!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingBottom="@dimen/activity_vertical_margin"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="50dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/appDescriptionAdService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ajouter un service"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/NomService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_username"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_nomService"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:backgroundTint="@color/white"
            android:gravity="top"

            android:hint="@string/prompt_entrerInfoRequis"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLines="50"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#838383"/>
           <!-- android:text="Entrez ici les informations requises" -->



        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/docRequis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_username"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_docRequis"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="#838383" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/ajouter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:backgroundTint="@color/teal_700"
            android:enabled="true"
            android:text="@string/action_ajouter"
            android:textAlignment="center"
            android:textColor="@color/white" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</RelativeLayout>