<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#1C1B1B"
    android:outlineAmbientShadowColor="#FFFFFF"
    android:outlineSpotShadowColor="#FFFFFF"
    tools:context=".ClientPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

                <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:enabled="true"

                android:text="Retour"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11dp"
                app:cornerRadius="10dp" />
            <!-- android:onClick="onReturn"-->


            <TextView
                android:id="@+id/appDescriptionClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_client"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/recherche_client"
                android:textColor="@color/white"
                android:textSize="20dp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/ajouter2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:backgroundTint="@color/teal_700"
                android:enabled="true"
                android:text="@string/recherche_action"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/demande"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/voir_demande"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/ajouter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:backgroundTint="@color/teal_700"
                android:enabled="true"
                android:onClick="onDemandes"
                android:text="@string/action_demande"
                android:textAlignment="center"
                android:textColor="@color/white" />
            <!-- this is a comment -->


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</RelativeLayout>